--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,10 +1,7 @@
 [docks]
 
-dock_3="Scene,Import"
-dock_3_selected_tab_idx=0
-dock_4="FileSystem"
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
-dock_5="Inspector,Node,History"
 dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=480
@@ -12,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://models/chest_gold.glb")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://models/", "res://addons/", "res://addons/proto_controller/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -25,6 +22,9 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
@@ -33,6 +33,7 @@ current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
@@ -51,8 +52,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 0, 0, 0)
-floating_window_screen=-1
+floating_window_rect=Rect2i(882, 586, 1399, 740)
+floating_window_screen=0
 
 [ShaderEditor]
 
