--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,9 +37,10 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=0
-mode="maximized"
-position=Vector2i(0, 68)
+screen=1
+mode="windowed"
+position=Vector2i(1664, 708)
+size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
