--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -38,8 +38,8 @@ selected_bottom_panel_item=0
 [EditorWindow]
 
 screen=1
-mode="windowed"
-position=Vector2i(1664, 708)
+mode="maximized"
+position=Vector2i(1920, 23)
 size=Vector2i(1152, 648)
 
 [ScriptEditor]
