--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=0
+dock_3_selected_tab_idx=1
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://addons/proto_controller/")
+dock_filesystem_selected_paths=PackedStringArray("res://models/chest_texture.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://models/", "res://addons/", "res://addons/proto_controller/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn")
+open_scenes=PackedStringArray("res://main.tscn")
 current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
@@ -44,8 +44,8 @@ size=Vector2i(1152, 648)
 
 [ScriptEditor]
 
-open_scripts=["res://addons/proto_controller/proto_controller.gd"]
-selected_script="res://addons/proto_controller/proto_controller.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=400
 list_split_offset=0
@@ -53,8 +53,8 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(2618, 355, 1164, 695)
-floating_window_screen=1
+floating_window_rect=Rect2i(882, 586, 1399, 740)
+floating_window_screen=0
 
 [ShaderEditor]
 
