--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,6 +1,6 @@
 [docks]
 
-dock_3_selected_tab_idx=1
+dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn")
-current_scene="res://main.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://scenes/tree.tscn")
+current_scene="res://scenes/tree.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -37,9 +37,9 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 68)
 size=Vector2i(1152, 648)
 
 [ScriptEditor]
