--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -13,3 +13,8 @@ scenes=["res://scenes/tree.tscn", "res://main.tscn"]
 [dialog_bounds]
 
 create_new_node=Rect2(570, 256, 1800, 1400)
+
+[color_picker]
+
+picker_shape=3
+recent_presets=PackedColorArray(1, 1, 0.45882353, 1, 0, 1, 0.45882353, 1, 0, 1, 0.16862746, 1, 0, 0.43137255, 0.16862746, 1, 0.16369027, 0.4183528, 0.18586597, 1, 0.56156987, 0.2548038, 0.0022648405, 1, 0.19579893, 0.41368225, 0.18300721, 1, 0.2220003, 0.40887108, 0.18515849, 1, 0.14247817, 0.27581424, 0.1161895, 1)
