--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://models/treeMesh.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://models/", "res://addons/", "res://addons/proto_controller/")
+dock_filesystem_selected_paths=PackedStringArray("res://models/chest_texture.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://models/", "res://addons/", "res://addons/proto_controller/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -37,9 +37,9 @@ selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=0
+screen=1
 mode="maximized"
-position=Vector2i(0, 68)
+position=Vector2i(1920, 23)
 size=Vector2i(1152, 648)
 
 [ScriptEditor]
