--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,13 +4,13 @@ dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_h_split_offset=480
+dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://models/chest_texture.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://models/", "res://addons/", "res://addons/proto_controller/")
+dock_filesystem_selected_paths=PackedStringArray("res://models/tree.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://models/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -33,32 +33,32 @@ current_scene="res://scenes/tree.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
 
 [EditorWindow]
 
-screen=1
+<<<<<<<Updatedupstreamscreen=1
 mode="maximized"
 position=Vector2i(1920, 23)
 size=Vector2i(1152, 648)
+screen=1
 
 [ScriptEditor]
 
 open_scripts=[]
 selected_script=""
 open_help=[]
-script_split_offset=400
+script_split_offset=200
 list_split_offset=0
 zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(882, 586, 1399, 740)
-floating_window_screen=0
+floating_window_rect=Rect2i(0, 0, 0, 0)
+floating_window_screen=-1
 
 [ShaderEditor]
 
 open_shaders=[]
-split_offset=400
+split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
