--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,14 +4,14 @@ dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_floating={}
-dock_filesystem_h_split_offset=240
+dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://sfx/chopping-wood-96709.mp3")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sfx/", "res://scripts/", "res://scenes/", "res://addons/proto_controller/")
-dock_node_current_tab=1
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/tree_log.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://models/", "res://addons/", "res://addons/proto_controller/")
+dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -28,39 +28,39 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn", "res://addons/proto_controller/proto_controller.tscn", "res://scenes/tree_log.tscn")
+open_scenes=PackedStringArray("res://main.tscn", "res://scenes/tree.tscn", "res://scenes/tree_log.tscn")
 current_scene="res://scenes/tree_log.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_main_editor_idx=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
 <<<<<<<Updatedupstream<<<<<<<Updatedupstreamscreen=1
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 68)
 size=Vector2i(1152, 648)
-screen=1
+screen=0
 
 [ScriptEditor]
 
-open_scripts=["res://addons/proto_controller/proto_controller.gd", "res://scripts/tree.gd", "res://scripts/tree_log.gd"]
-selected_script="res://addons/proto_controller/proto_controller.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
-script_split_offset=200
+script_split_offset=400
 list_split_offset=0
-zoom_factor=1.6428567
+zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(2618, 355, 1164, 695)
-floating_window_screen=1
+floating_window_rect=Rect2i(882, 586, 1399, 740)
+floating_window_screen=0
 
 [ShaderEditor]
 
 open_shaders=[]
-split_offset=200
+split_offset=400
 selected_shader=""
 text_shader_zoom_factor=1.0
 
