--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=270
+dock_hsplit_3=-270
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 
 [EditorWindow]
 
-screen=1
+screen=0
 mode="maximized"
 position=Vector2i(0, 68)
 size=Vector2i(1152, 648)
@@ -63,3 +63,12 @@ log_filter_3=true
 log_filter_4=true
 collapse=false
 show_search=true
+
+[EditorNode]
+
+open_scenes=PackedStringArray("res://main.tscn", "res://scenes/tree.tscn", "res://scenes/tree_log.tscn")
+current_scene="res://main.tscn"
+center_split_offset=0
+selected_bottom_panel_item=0
+selected_default_debugger_tab_idx=0
+selected_main_editor_idx=1
