--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,13 +6,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 195,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 195,
+"row": 99,
+"scroll_position": 87.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -24,13 +20,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 60,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 60,
+"row": 40,
+"scroll_position": 17.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -42,12 +34,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 29,
+"row": 4,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 29,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
