--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,14 +2,14 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://sfx/chopping-wood-96709.mp3")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/tree_log.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sfx/", "res://scripts/", "res://scenes/", "res://addons/proto_controller/")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn", "res://addons/proto_controller/proto_controller.tscn", "res://scenes/tree_log.tscn")
-current_scene="res://scenes/tree_log.tscn"
+current_scene="res://main.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,18 +37,11 @@ selected_bottom_panel_item=1
 
 [EditorWindow]
 
-<<<<<<< Updated upstream
-<<<<<<<Updatedupstream<<<<<<<Updatedupstreamscreen=1
+<<<<<<<Updatedupstream<<<<<<<Updatedupstream<<<<<<<Updatedupstreamscreen=1
 mode="maximized"
 position=Vector2i(1920, 23)
 size=Vector2i(1152, 648)
 screen=1
-=======
-screen=0
-mode="windowed"
-position=Vector2i(768, 431)
-size=Vector2i(1152, 600)
->>>>>>> Stashed changes
 
 [ScriptEditor]
 
@@ -70,13 +63,3 @@ open_shaders=[]
 split_offset=200
 selected_shader=""
 text_shader_zoom_factor=1.0
-
-[editor_log]
-
-log_filter_0=true
-log_filter_2=true
-log_filter_1=false
-log_filter_3=true
-log_filter_4=true
-collapse=false
-show_search=true
