--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -35,9 +35,9 @@ selected_main_editor_idx=1
 
 [EditorWindow]
 screen=0
-mode="maximized"
-position=Vector2i(0, 68)
-size=Vector2i(1152, 648)
+mode="windowed"
+position=Vector2i(768, 431)
+size=Vector2i(1152, 600)
 
 [ScriptEditor]
 open_scripts=[]
