--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -1,8 +1,11 @@
 [res://scenes/tree.tscn]
+
 groups=[&"trees"]
 
 [res://scenes/tree_log.tscn]
-groups=[&"logs"]
+
+groups=[&"pickable", &"logs"]
 
 [res://main.tscn]
+
 groups=[&"player"]
