--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -1,4 +1,5 @@
 [docks]
+
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=1
@@ -8,9 +9,9 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/tree_log.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://addons/proto_controller/proto_controller.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sfx/", "res://scripts/", "res://scenes/", "res://models/", "res://addons/", "res://addons/proto_controller/")
-dock_node_current_tab=0
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -26,38 +27,44 @@ dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
+
 open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn", "res://addons/proto_controller/proto_controller.tscn", "res://scenes/tree_log.tscn", "res://scenes/tree.tscn")
 current_scene="res://main.tscn"
-center_split_offset=0
+center_split_offset=-279
 selected_bottom_panel_item=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 
 [EditorWindow]
-screen=0
-mode="windowed"
-position=Vector2i(768, 431)
+
+screen=1
+mode="maximized"
+position=Vector2i(1920, 23)
 size=Vector2i(1152, 600)
 
 [ScriptEditor]
-open_scripts=[]
-selected_script=""
+
+open_scripts=["res://addons/proto_controller/proto_controller.gd"]
+selected_script="res://addons/proto_controller/proto_controller.gd"
 open_help=[]
 script_split_offset=400
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.2142856
 
 [GameView]
-floating_window_rect=Rect2i(882, 586, 1399, 740)
-floating_window_screen=0
+
+floating_window_rect=Rect2i(2618, 355, 1164, 695)
+floating_window_screen=1
 
 [ShaderEditor]
+
 open_shaders=[]
 split_offset=400
 selected_shader=""
 text_shader_zoom_factor=1.0
 
 [editor_log]
+
 log_filter_0=true
 log_filter_2=true
 log_filter_1=false
