--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,16 +2,16 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=480
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://addons/proto_controller/proto_controller.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sfx/", "res://scripts/", "res://scenes/", "res://models/", "res://addons/", "res://addons/proto_controller/")
-dock_node_current_tab=1
+dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sfx/", "res://addons/proto_controller/")
+dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn", "res
 current_scene="res://main.tscn"
 center_split_offset=-279
 selected_bottom_panel_item=0
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
 
 [EditorWindow]
