--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://main.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sfx/", "res://addons/proto_controller/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/tree.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://addons/proto_controller/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -39,7 +39,7 @@ selected_main_editor_idx=1
 
 screen=1
 mode="maximized"
-position=Vector2i(1920, 23)
+position=Vector2i(0, 1103)
 size=Vector2i(1152, 600)
 
 [ScriptEditor]
