--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/tree.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://addons/proto_controller/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://models/", "res://addons/proto_controller/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -29,17 +29,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn", "res://addons/proto_controller/proto_controller.tscn", "res://scenes/tree_log.tscn", "res://scenes/tree.tscn")
-current_scene="res://main.tscn"
+current_scene="res://addons/proto_controller/proto_controller.tscn"
 center_split_offset=-279
 selected_bottom_panel_item=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 
 [EditorWindow]
 
 screen=1
 mode="maximized"
-position=Vector2i(0, 1103)
+position=Vector2i(1920, 23)
 size=Vector2i(1152, 600)
 
 [ScriptEditor]
