--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/")  # keep the one you want
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://models/", "res://scenes/", "res://addons/proto_controller/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/tree_v_2.tscn")
+#keeptheoneyouwantdock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://models/", "res://scenes/", "res://addons/proto_controller/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -22,18 +22,20 @@ dock_hsplit_1=0
 dock_hsplit_2=270
 dock_hsplit_3=-270
 dock_hsplit_4=0
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://models/", "res://addons/proto_controller/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn", "res://addons/proto_controller/proto_controller.tscn", "res://scenes/tree_log.tscn", "res://scenes/tree.tscn", "res://scenes/tree_v_2.tscn")
-current_scene="res://scenes/tree_v_2.tscn"  # choose the one you want
-center_split_offset=-279
+open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn", "res://addons/proto_controller/proto_controller.tscn", "res://scenes/tree_log.tscn", "res://scenes/tree.tscn", "res://scenes/tree_v_2.tscn", "res://tree_v_2.tscn")
+current_scene="res://scenes/tree.tscn"
+#choosetheoneyouwantcenter_split_offset=-279
 selected_bottom_panel_item=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
+center_split_offset=-279
 
 [EditorWindow]
 
@@ -53,7 +55,7 @@ zoom_factor=1.2142856
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 1103, 3440, 1369)
+floating_window_rect=Rect2i(2618, 331, 1164, 695)
 floating_window_screen=1
 
 [ShaderEditor]
