--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,26 +28,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray(
-"res://main.tscn", 
-"res://scenes/chest.tscn", 
-"res://addons/proto_controller/proto_controller.tscn", 
-"res://scenes/tree_log.tscn", 
-"res://scenes/tree.tscn", 
-"res://scenes/tree_v_2.tscn", 
-"res://tree_v_2.tscn"
-)
-current_scene="res://tree_v_2.tscn"
+open_scenes=PackedStringArray("res://main.tscn", "res://scenes/chest.tscn", "res://addons/proto_controller/proto_controller.tscn", "res://scenes/tree_log.tscn", "res://scenes/tree.tscn", "res://scenes/tree_v_2.tscn", "res://tree_v_2.tscn")
+current_scene="res://main.tscn"
 center_split_offset=-279
 selected_bottom_panel_item=0
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 
 [EditorWindow]
 
 screen=1
 mode="maximized"
-position=Vector2i(0, 1103)
+position=Vector2i(1920, 23)
 size=Vector2i(1152, 600)
 
 [ScriptEditor]
